<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mainbutton="http://schemas.android.com/apk/res/com.studentenwerk">
    <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:layout_width="fill_parent" android:layout_height="145.0dip" android:src="@drawable/header" />
        <View android:layout_width="fill_parent" android:layout_height="0.0dip" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/meals" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainButt_1" android:onClick="essen_Clicked" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/roomboard" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_0" android:onClick="ext_0" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/jobs" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_1" android:onClick="ext_1" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/guidance" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_5" android:onClick="ext_6" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/events" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_4" android:onClick="ext_4" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/blackboard" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_2" android:onClick="ext_2" />
        <Button android:textColor="@color/MainButton_Font1" android:gravity="left|center" android:background="@drawable/blackboard" android:paddingLeft="70.0dip" android:layout_width="wrap_content" android:layout_height="100.0dip" android:layout_marginLeft="@dimen/MainEatButtonMargin" android:layout_marginRight="@dimen/MainEatButtonMargin" android:layout_marginBottom="@dimen/MainButtonMarginBottom" android:text="@string/mainExt_3" android:onClick="ext_3" />
        <com.studentenwerk.views.MainButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/mainButt_2" android:onClick="settings_Clicked" mainbutton:subText="@string/mainButt_2_sub" />
        <com.studentenwerk.views.MainButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mainButt_3" android:onClick="news_Clicked" mainbutton:subText="@string/mainButt_3_sub" />
        <com.studentenwerk.views.MainButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mainButt_4" android:onClick="ext_5" mainbutton:subText="@string/mainButt_4_sub" />
        <WebView android:id="@id/webview" android:scrollbars="none" android:layout_width="wrap_content" android:layout_height="wrap_content" android:overScrollMode="never" />
    </LinearLayout>
</ScrollView>